--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,4 +3,5 @@
  *= require_tree ../../../vendor/assets/stylesheets/customer/css
  *= require_tree ../../../vendor/assets/stylesheets/customer/fonts
  *= require custom
+ *= require notification
  */
