--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -69,6 +69,11 @@
                     </li>
                   </ul>
                 </li>
+                <li>
+                  <div id="notifications_in_header">
+                    <%= render_notifications_of current_user, index_content: :with_attributes %>
+                  </div>
+                </li>
               <% else %>
                 <li>
                   <%= link_to  new_user_session_path do %>
