--- a/app/views/reactions/_reaction_modal.html.erb
+++ b/app/views/reactions/_reaction_modal.html.erb
@@ -1,4 +1,4 @@
-<div id="reaction-modal" class="list-like-modal modal" role="dialog">
+<div id="reaction-modal-<%= @post_id %>" class="list-like-modal modal" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
