--- a/app/views/reactions/show.js.erb
+++ b/app/views/reactions/show.js.erb
@@ -1,2 +1,2 @@
 $("#reaction-users-modal-<%= @post_id %>").html("<%= escape_javascript(render('reaction_modal')) %>");
-$('#reaction-modal').modal('show');
+$('#reaction-modal-<%= @post_id %>').modal('show');
