--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,7 +2,6 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
-
 /* mixins, variables, etc. */
 $gray-medium-light: #eaeaea;
 $whisper: #e8e8e8;
@@ -42,6 +41,11 @@ footer {
       margin-left: 15px;
     }
   }
+}
+
+/* Up Post Card*/
+.up-post-card{
+   margin-bottom: 20px;
 }
 
 /* Profile Card */
@@ -138,6 +142,7 @@ aside {
       display: block inline;
       font-size: medium;
       float: left;
+
     }
     .like {
       color: $gray-light;
@@ -152,7 +157,6 @@ aside {
     margin-left: 60px;
     font-size: small;
   }
-
   .gravatar {
     float: left;
     margin-right: 10px;
@@ -173,7 +177,7 @@ aside {
   }
 }
 
-/*Modal*/
+/*Modal Like*/
 .list-like-modal{
   .modal-dialog{
     overflow-y: initial !important
@@ -184,6 +188,7 @@ aside {
   }
 }
 
+/*Modal Comment*/
 .list-comment-modal{
   .modal-dialog{
     overflow-y: initial !important
@@ -195,5 +200,27 @@ aside {
   .modal-comment-input{
     padding-left: 10px;
     padding-right: 10px;
+  }
+  .comment-timestamp {
+    color: $gray-light;
+    font-size: small;
+  }
+  .comment-content{
+    display: block;
+  }
+  .comment-edit{
+    float:right;
+  }
+}
+
+textarea{
+  width:100%;
+  height:100%;
+}
+
+span.picture {
+  margin-top: 10px;
+  input {
+    border: 0;
   }
 }
