--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
 
 <div class="site-section bg-light">
   <div class="container">
+    <div class="alert"></div>
     <div class="row">
       <aside class="col-md-4">
         <div class="card card-profile">
