add_gem_ratyrate

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -266,3 +266,7 @@ ul.ui-autocomplete {
   min-height: 400px !important;
   height: calc(50vh) !important;
 }
+.err-msg{
+  font-style: italic;
+  color: red;
+}
