--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -5,11 +5,13 @@
     <div class="col-sm-4">
       <%= label_tag :City, nil, class: "text-black" %>
       <%= text_field_tag :city_name, nil, data: { autocomplete_source: cities_path},class: "form-control"%>
+      <div id = "err_city_name"></div>
     </div>
     <div class="col-sm-4">
       <%= f.label :Travel_Place, class: "text-black" %>
       <%= f.text_field :travel_place_name, class: "form-control"%>
       <%= f.hidden_field :travel_place_id, value: nil, id: "travel_place_id" %>
+      <div id = "err_place_name"></div>
     </div>
   </div>
 
@@ -20,11 +22,6 @@
   <div class="field">
      <%= f.label :Content, class: "text-black" %>
     <%= f.text_area :content, placeholder: t("label.post_content"),class: "form-control" %>
-  </div>
-
-  <div class="field">
-     <%= f.label :Vote_Point, class: "text-black" %>
-     <%= f.number_field :vote_point, max: 5, step: 0.5, min:0, :as => "number", class: "form-control"%>
   </div>
 
   <%= f.fields_for :Post_Images do |p| %>
@@ -38,4 +35,4 @@
 <% end %>
 </div>
 
-<%= javascript_include_tag('custom') %>
+<%= javascript_include_tag("custom") %>
