--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,4 +2,5 @@
  *= require_self
  *= require_tree ../../../vendor/assets/stylesheets/customer/css
  *= require_tree ../../../vendor/assets/stylesheets/customer/fonts
+ *= require custom
  */
