--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,6 +53,11 @@
                   <% end %>
                   <ul class="dropdown arrow-top">
                     <li>
+                      <%= link_to current_user do %>
+                        <span><%= t "label.my_home_pages" %></span>
+                      <% end %>
+                    </li>
+                    <li>
                       <%= link_to edit_user_path(current_user) do %>
                         <span><%= t "label.settings" %></span>
                       <% end %>
