--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,11 +5,23 @@
   <div class="container">
     <div class="row">
       <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.username %>
-      </h1>
-    </section>
-  </aside>
+        <div class="card">
+          <div class="card-body">
+            <%= gravatar_for @user %>
+            <strong><%= @user.username %></strong>
+            <hr>
+            <strong><span><%= @user.posts.count %></span></strong>
+            <%= t("label.posts") %>
+          </div>
+        </div>
+    </aside>
+   <div class="col-md-8">
+    <% if @user.posts.any? %>
+
+      <ol class="posts">
+        <%= render @posts %>
+      </ol>
+      <%= paginate @posts, theme: "twitter-bootstrap-4" %>
+    <% end %>
+  </div>
 </div>
