--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= full_title yield :title %></title>
-  <%= render "layouts/rails_default" %>
-</head>
-<body>
-  <%= render "layouts/header" %>
-  <%= yield %>
-  <%= render "layouts/footer" %>
-</body>
+  <head>
+    <title><%= full_title yield :title %></title>
+    <%= render "layouts/rails_default" %>
+  </head>
+  <body>
+    <div class="site-wrap">
+      <%= render "layouts/header" %>
+      <%= yield %>
+      <%= render "layouts/footer" %>
+    </div>
+  </body>
 </html>
