--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,13 @@
-<div class="site-wrap">
-  <div class="site-mobile-menu">
+<div class="site-mobile-menu">
     <div class="site-mobile-menu-header">
       <div class="site-mobile-menu-close mt-3">
         <span class="icon-close2 js-menu-toggle"></span>
       </div>
     </div>
     <div class="site-mobile-menu-body"></div>
-  </div>
+</div>
 
-  <header class="site-navbar" role="banner">
-
+<header class="site-navbar" role="banner">
     <div class="container">
       <div class="row align-items-center">
 
@@ -22,7 +20,7 @@
           <nav class="site-navigation position-relative text-right" role="navigation">
             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
               <li class="active">
-                <%= link_to "#" do %>
+                <%= link_to root_path do %>
                   <span><%= t ".home" %></span>
                 <% end %>
               </li>
@@ -48,16 +46,36 @@
                   <span><%= t ".blog" %></span>
                 <% end %>
               </li>
-              <li>
-                <%= link_to "#" do %>
-                  <span><%= t ".login" %></span>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to "#" do %>
-                  <span><%= t ".sign-up" %></span>
-                <% end %>
-              </li>
+              <% if logged_in? %>
+                <li class="has-children">
+                  <%= link_to "#" do%>
+                    <span><%= t "label.user" %></span>
+                  <% end %>
+                  <ul class="dropdown arrow-top">
+                    <li>
+                      <%= link_to edit_user_path(current_user) do %>
+                        <span><%= t "label.settings" %></span>
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to logout_path, method: :delete do %>
+                        <span><%= t "label.logout" %></span>
+                      <% end %>
+                    </li>
+                  </ul>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to login_path do %>
+                    <span><%= t "label.login" %></span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to signup_path do %>
+                    <span><%= t "label.signup" %></span>
+                  <% end %>
+                </li>
+               <% end %>
             </ul>
           </nav>
         </div>
@@ -71,51 +89,5 @@
       </div>
 
     </div>
-
-  </header>
-
-  <div class="site-blocks-cover overlay" style="background-image: url(<%= asset_url('hero_1.jpg')%>);"  data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row align-items-center justify-content-center text-center">
-        <div class="col-md-10">
-
-          <div class="row justify-content-center mb-4">
-            <div class="col-md-10 text-center">
-              <h1 ><%= t ".find-nearby" %><span class="typed-words"></span></h1>
-            </div>
-          </div>
-
-          <div class="form-search-wrap p-2" >
-            <%= form_for :search do |f| %>
-            <div class="row align-items-center">
-              <div class="col-lg-12 col-xl-4 no-sm-border border-right">
-                <%= f.text_field :what, class: "form-control", placeholder: t(".what") %>
-              </div>
-              <div class="col-lg-12 col-xl-3 no-sm-border border-right">
-                <div class="wrap-icon">
-                  <span class="icon icon-room"></span>
-                  <%= f.text_field :location, class: "form-control", placeholder: t(".location") %>
-                </div>
-
-              </div>
-              <div class="col-lg-12 col-xl-3">
-                <div class="select-wrap">
-                  <span class="icon"><span class="icon-keyboard_arrow_down"></span></span>
-                  <select class="form-control" name="" id="">
-                    <option value=""><%= t ".all" %></option>
-                    <option value=""><%= t ".hotels" %></option>
-                    <option value=""><%= t ".restaurants" %></option>
-                  </select>
-                </div>
-              </div>
-              <div class="col-lg-12 col-xl-2 ml-auto text-right">
-                <%= f.submit :search, class: "btn text-white btn-primary form-control", value: t(".search") %>
-              </div>
-
-            </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+</header>
+<%= render yield :header_partial %>
