--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
 <% provide :title, t(".home") %>
+<% provide :header_partial, "shared/header_partial/search" %>
+
 <div class="site-section">
   <div class="container">
     <div class="row justify-content-center mb-5">
