--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,13 +15,13 @@
               <%= render "shared/stats" %>
             </section>
             <hr>
-            <%= render "follow_form" if logged_in? %>
+            <%= render "follow_form" if user_signed_in? %>
           </div>
         </div>
       </aside>
 
       <div class="col-md-8">
-        <% if current_user?(@user) %>
+        <% if current_user == @user %>
           <button id= "up-post-btn" type="button" class="btn btn-primary">Up new post</button>
           <section id = "up-post-form"></section>
         <% end %>
