--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,7 +5,7 @@
     <%= time_ago_in_words(comment.created_at)%>
   </span>
   <span class="comment-edit">
-  <% if current_user?(comment.user) %>
+  <% if current_user == comment.user %>
   <%= link_to t("button.delete"),comment,
                                   method: :delete,
                                   data: { confirm: t("dialog.delete_comment_confirm") },
