--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,10 +41,10 @@
                   </li>
                 </ul>
               </li>
-              <% if logged_in? %>
+              <% if user_signed_in? %>
                 <li>
                   <%= link_to newfeed_user_path(current_user) do %>
-                    <span><%= t ".blog" %></span>
+                    <span><%= t ".new_feed" %></span>
                   <% end %>
                 </li>
                 <li class="has-children">
@@ -58,12 +58,12 @@
                       <% end %>
                     </li>
                     <li>
-                      <%= link_to edit_user_path(current_user) do %>
+                      <%= link_to edit_user_registration_path do %>
                         <span><%= t "label.settings" %></span>
                       <% end %>
                     </li>
                     <li>
-                      <%= link_to logout_path, method: :delete do %>
+                      <%= link_to destroy_user_session_path, method: :delete do %>
                         <span><%= t "label.logout" %></span>
                       <% end %>
                     </li>
@@ -71,12 +71,12 @@
                 </li>
               <% else %>
                 <li>
-                  <%= link_to login_path do %>
+                  <%= link_to  new_user_session_path do %>
                     <span><%= t "label.login" %></span>
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to signup_path do %>
+                  <%= link_to new_user_registration_path do %>
                     <span><%= t "label.signup" %></span>
                   <% end %>
                 </li>
