--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,7 @@
 <li>
   <%= gravatar_for user, size: Settings.user.gravatar_size_small %>
   <%= link_to user.username, user %>
-  <% if current_user.admin? && !current_user?(user) %>
+  <% if current_user.admin? && current_user != user %>
     | <%= link_to t(".delete"), user, method: :delete,
                                   data: { confirm: t("confirm_message") } %>
   <% end %>
