--- a/app/views/users/newfeed.html.erb
+++ b/app/views/users/newfeed.html.erb
@@ -15,7 +15,7 @@
               <%= render "shared/stats" %>
             </section>
             <hr>
-            <%= render "follow_form" if logged_in? %>
+            <%= render "follow_form" if user_signed_in? %>
           </div>
         </div>
       </aside>
