--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -16,7 +16,7 @@
               <%= render "shared/stats" %>
             </section>
             <hr>
-            <%= render "follow_form" if logged_in? %>
+            <%= render "follow_form" if user_signed_in? %>
           </div>
         </div>
 
