--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer >
+<footer class="footer">
   <div class="container">
     <div class="row pt-5 mt-5">
       <div class="col-12 text-md-center text-left">
