--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -47,7 +47,7 @@
           <div class="listing-item">
             <div class="listing-image">
               <% if travel_place.travel_place_images.first %>
-                <%= image_tag(travel_place.travel_place_images.first.link, class: "img-fluid") %>
+                <%= image_tag(travel_place.travel_place_images.first.link, class: "img-fluid popular_post_image") %>
               <% end %>
             </div>
             <div class="listing-item-content">
@@ -79,14 +79,14 @@
       <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
         <div class="h-entry">
           <% if post.post_images.first %>
-            <%= image_tag(post.post_images.first.link, class: "img-fluid") %>
+            <%= image_tag(post.post_images.first.link, class: "img-fluid popular_post_image") %>
           <% end %>
           <div class="h-entry-inner">
             <h2 class="font-size-regular">
-              <%= link_to truncate(post.title, length: 30), "#" %>
+              <%= link_to truncate(post.title, length: 20), "#" %>
             </h2>
             <div class="meta mb-4"><%= t ".by" %>
-              <%= link_to post.user.username, "#" %>
+              <%= link_to post.user.username, user_path(post.user) %>
               <span class="mx-2">&bullet;</span>
               <%= t time_ago_in_words(post.created_at) %>
             </div>
