--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,23 +5,29 @@
   <div class="container">
     <div class="row">
       <aside class="col-md-4">
-        <div class="card">
+        <div class="card card-profile">
           <div class="card-body">
             <%= gravatar_for @user %>
-            <strong><%= @user.username %></strong>
+            <strong><%= link_to @user.username, @user %></strong>
             <hr>
-            <strong><span><%= @user.posts.count %></span></strong>
-            <%= t("label.posts") %>
+            <section class="stats">
+              <%= render "shared/stats" %>
+            </section>
+            <hr>
+            <%= render "follow_form" if logged_in? %>
           </div>
         </div>
-    </aside>
-   <div class="col-md-8">
-    <% if @user.posts.any? %>
+      </aside>
 
-      <ol class="posts">
-        <%= render @posts %>
-      </ol>
-      <%= paginate @posts, theme: "twitter-bootstrap-4" %>
-    <% end %>
+      <div class="col-md-8">
+        <% if @user.posts.any? %>
+          <ol class="posts">
+            <%= render @posts %>
+          </ol>
+          <%= paginate @posts, theme: "twitter-bootstrap-4" %>
+        <% end %>
+      </div>
+
+    </div>
   </div>
 </div>
