--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,7 @@
 @import 'bootstrap/variables';
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
 
 /* mixins, variables, etc. */
 $gray-medium-light: #eaeaea;
@@ -8,6 +11,12 @@ $white-smoke: #f5f5f5;
 .popular_post_image{
   width: 350px !important;
   height: 200px !important;
+}
+
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* footer */
@@ -114,10 +123,27 @@ aside {
   .content {
     display: block;
     margin-left: 60px;
-
+    margin-right: 60px;
     .carousel-inner > .carousel-item > img {
       width:640px;
       height:420px;
+    }
+  }
+  .reaction-amount{
+    display: block;
+    margin-left: 60px;
+    margin-right: 60px;
+    .comment {
+      color: $gray-light;
+      display: block inline;
+      font-size: medium;
+      float: left;
+    }
+    .like {
+      color: $gray-light;
+      display: block inline;
+      font-size: medium;
+      float: left;
     }
   }
   .timestamp {
@@ -126,26 +152,14 @@ aside {
     margin-left: 60px;
     font-size: small;
   }
-  .comment {
-    color: $gray-light;
-    display: block inline;
-    font-size: medium;
-    padding-left: 450px;
-    float:left;
-  }
-  .like {
-    color: $gray-light;
-    display: block inline;
-    font-size: medium;
-    float:left;
-  }
+
   .gravatar {
     float: left;
     margin-right: 10px;
     margin-top: 5px;
     margin-left: 5px;
   }
-  .card {
+  .address-card {
     width: 10rem;
     background-color: $white-smoke;
     .address{
@@ -153,5 +167,33 @@ aside {
       display: block;
       font-size: small;
     }
+  }
+  .post-card{
+    margin-bottom: 20px;
+  }
+}
+
+/*Modal*/
+.list-like-modal{
+  .modal-dialog{
+    overflow-y: initial !important
+  }
+  .modal-body{
+    height: 400px;
+    overflow-y: auto;
+  }
+}
+
+.list-comment-modal{
+  .modal-dialog{
+    overflow-y: initial !important
+  }
+  .modal-body{
+    height: 300px;
+    overflow-y: auto;
+  }
+  .modal-comment-input{
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
