--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
 
 <div class="site-section bg-light">
   <div class="container">
+    <div class="alert"></div>
     <div class="row">
       <aside class="col-md-4">
         <div class="card card-profile">
@@ -20,6 +21,10 @@
       </aside>
 
       <div class="col-md-8">
+        <% if current_user?(@user) %>
+          <button id= "up-post-btn" type="button" class="btn btn-primary">Up new post</button>
+          <section id = "up-post-form"></section>
+        <% end %>
         <% if @user.posts.any? %>
           <ol class="posts">
             <%= render @posts %>
@@ -31,4 +36,6 @@
     </div>
   </div>
 </div>
-
+<script>
+    <%= render partial: "show.js.erb" %>
+</script>
