--- a/app/views/shared/header_partial/_search.html.erb
+++ b/app/views/shared/header_partial/_search.html.erb
@@ -11,7 +11,7 @@
           <%= form_tag search_index_path, method: :get, class: "navbar-form navbar-left" do %>
             <div class="row align-items-center">
               <div class="col-lg-12 col-xl-4 no-sm-border border-right">
-                <%= search_field_tag "what", params[:what], class: "form-control", placeholder: t("label.what"), data: { autocomplete_source:"#{@list_name}"} %>
+                <%= search_field_tag "search_place_name", params[:search_place_name], class: "form-control", placeholder: t("label.search_place_name"), data: { autocomplete_source:"#{@list_name}"} %>
               </div>
               <div class="col-lg-12 col-xl-3 no-sm-border border-right">
                 <div class="wrap-icon">
