add template staticpages

--- a/app/assets/stylesheets/custom-admin.scss
+++ b/app/assets/stylesheets/custom-admin.scss
@@ -3,8 +3,8 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'ionicons';
-@import 'admin/AdminLTE.min';
-@import 'admin/_all-skins.min';
+@import 'admin/css/AdminLTE.min';
+@import 'admin/css/_all-skins.min';
 
 .user-panel > .image > .img-circle {
     width: 100%;
