--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,5 @@
 /*
  *= require_self
+ *= require_tree ../../../vendor/assets/stylesheets/customer/css
+ *= require_tree ../../../vendor/assets/stylesheets/customer/fonts
  */
