--- a/app/views/shared/header_partial/_search.html.erb
+++ b/app/views/shared/header_partial/_search.html.erb
@@ -1,45 +1,39 @@
- <div class="site-blocks-cover overlay" style="background-image: url(<%= asset_url('hero_1.jpg')%>);"  data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row align-items-center justify-content-center text-center">
-        <div class="col-md-10">
-
-          <div class="row justify-content-center mb-4">
-            <div class="col-md-10 text-center">
-              <h1 ><%= t ".find-nearby" %><span class="typed-words"></span></h1>
-            </div>
+<div class="site-blocks-cover overlay" style="background-image: url(<%= asset_url("hero_1.jpg")%>);" data-stellar-background-ratio="0.5">
+  <div class="container">
+    <div class="row align-items-center justify-content-center text-center">
+      <div class="col-md-10">
+        <div class="row justify-content-center mb-4">
+          <div class="col-md-10 text-center">
+            <h1 ><%= t ".find-nearby" %><span class="typed-words"></span></h1>
           </div>
-
-          <div class="form-search-wrap p-2" >
-            <%= form_for :search do |f| %>
+        </div>
+        <div class="form-search-wrap p-2" >
+          <%= form_tag search_index_path, method: :get, class: "navbar-form navbar-left" do %>
             <div class="row align-items-center">
               <div class="col-lg-12 col-xl-4 no-sm-border border-right">
-                <%= f.text_field :what, class: "form-control", placeholder: t("label.what") %>
+                <%= search_field_tag "what", params[:what], class: "form-control", placeholder: t("label.what"), data: { autocomplete_source:"#{@list_name}"} %>
               </div>
               <div class="col-lg-12 col-xl-3 no-sm-border border-right">
                 <div class="wrap-icon">
+                  <%= search_field_tag "address", params[:location], class: "form-control", placeholder: t("label.location"), data: { autocomplete_source:"#{@list_address}"} %>
                   <span class="icon icon-room"></span>
-                  <%= f.text_field :location, class: "form-control", placeholder: t("label.location") %>
                 </div>
-
               </div>
               <div class="col-lg-12 col-xl-3">
                 <div class="select-wrap">
                   <span class="icon"><span class="icon-keyboard_arrow_down"></span></span>
-                  <select class="form-control" name="" id="">
-                    <option value=""><%= t ".all" %></option>
-                    <option value=""><%= t ".hotels" %></option>
-                    <option value=""><%= t ".restaurants" %></option>
-                  </select>
+                  <div class="form-control">
+                    <%= select_tag :type, options_for_select(@travel_place_types.collect{ |type| [type.name, type.id] }, params[:type]), {:style => "border: 0"}%>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-12 col-xl-2 ml-auto text-right">
-                <%= f.submit :search, class: "btn text-white btn-primary form-control", value: t("button.search") %>
+                <%= submit_tag :search, class: "btn text-white btn-primary form-control", value: t("button.search") %>
               </div>
-
             </div>
-            <% end %>
-          </div>
+          <% end %>
         </div>
       </div>
     </div>
   </div>
+</div>
