--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -18,7 +18,7 @@
           <li class="dropdown user user-menu">
             <%= link_to "#", class: "dropdown-toggle",data: {toggle: "dropdown"} do %>
               <%= image_tag("user1-128x128.jpg", class: "user-image") %>
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs"><%= session[:name] %></span>
             <% end %>
             <ul class="dropdown-menu">
               <li class="user-header">
@@ -29,7 +29,9 @@
                   <%= link_to t(".profile"), "#", class: "btn btn-default btn-flat" %>
                 </div>
                 <div class="pull-right">
-                  <%= link_to t(".sign-out"), "#", class: "btn btn-default btn-flat" %>
+                  <%= link_to logout_path, method: :delete, class: "btn btn-default btn-flat" do %>
+                    <%= t ".sign-out" %>
+                  <% end %>
                 </div>
               </li>
             </ul>
@@ -51,7 +53,7 @@
           <%= image_tag("user1-128x128.jpg", class: "img-circle") %>
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p><%= session[:name] %></p>
           <%= link_to "#" do %>
             <i class="fa fa-circle text-success"></i><%= t ".online" %>
           <% end %>
@@ -70,18 +72,14 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header"><%= t ".place" %></li>
         <li>
-          <%= link_to("#") do %>
+          <%= link_to(admin_cities_path) do %>
             <i class="fa fa-circle-o text-red"></i> <span><%= t ".city" %></span>
           <% end %>
         </li>
         <li>
-          <%= link_to("#") do %>
-            <i class="fa fa-circle-o text-yellow"></i> <span><%= t ".hotel" %></span>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to("#") do %>
-            <i class="fa fa-circle-o text-aqua"></i> <span><%= t ".playground" %></span>
+          <%= link_to(admin_travelplaces_path) do %>
+            <i class="fa fa-circle-o text-yellow"></i>
+            <span><%= t ".travel_place" %></span>
           <% end %>
         </li>
         <li class="header"><%= t ".other" %></li>
