--- a/app/views/admin/_rails_default.html.erb
+++ b/app/views/admin/_rails_default.html.erb
@@ -3,3 +3,5 @@
 
 <%= stylesheet_link_tag "admin", media: "all", "data-turbolinks-track": "reload" %>
 <%= javascript_include_tag "admin", "data-turbolinks-track": "reload" %>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
