--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,6 +4,9 @@
   </section>
   <section class="content">
     <div class="box">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
     </div>
   </section>
 </div>
