--- a/app/assets/stylesheets/custom-admin.scss
+++ b/app/assets/stylesheets/custom-admin.scss
@@ -5,6 +5,7 @@
 @import 'ionicons';
 @import 'admin/css/AdminLTE.min';
 @import 'admin/css/_all-skins.min';
+@import 'toastr';
 
 .user-panel > .image > .img-circle {
     width: 100%;
