--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -224,3 +224,10 @@ span.picture {
     border: 0;
   }
 }
+
+.list_post{
+  width: 700px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
