--- a/app/views/reactions/create.js.erb
+++ b/app/views/reactions/create.js.erb
@@ -1,3 +1,3 @@
-$("#reaction_form-<%=@post_id %>").html("<%= escape_javascript(render partial: 'users/unlike',locals: { post_id: @post_id }) %>");
-<% num_of_likes =  Reaction.where("reaction_type_id = ? and post_id =?", Settings.reaction_type.like, @post_id).count %>;
+$("#reaction_form-<%=@post_id %>").html("<%= escape_javascript(render partial: 'shared/reaction/unlike',locals: { post_id: @post_id }) %>");
+<% num_of_likes =  Reaction.get_like(Settings.reaction_type.like,@post_id).count %>;
 $("#num_of_likes-<%= @post_id %>").html("<%= I18n.t(:'label.like', count: num_of_likes)%>");
