--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,7 +24,7 @@
               <div class="row form-group">
                 <div class="col-md-12">
                   <%= f.label :email %><br />
-                  <%= f.email_field :email, autofocus: true, autocomplete: "email",:readonly => true,:disabled => true, class: "form-control" %>
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email",readonly: true,disabled: true, class: "form-control" %>
                 </div>
               </div>
 
