--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,7 +13,7 @@
     <span class="content">
 
       <div class="card address-card">
-        <%= link_to "#" do %>
+        <%= link_to detail_index_path(name: post.travel_place_name) do %>
             <strong><%= post.travel_place_name %></strong>
             <span class= "address">
               <i class = "icon icon-room"></i>
@@ -29,34 +29,32 @@
       <h5><%= post.title %></h5>
       <p><%= post.content %></p>
       <% if !post.post_images.empty? %>
-      <div id="imagesAlbum-<%= post.id %>" class="carousel slide " data-ride="carousel" data-interval="false">
-        <ol class="carousel-indicators">
-          <% num_of_images = post.post_images.count %>
-          <% post.post_images.each_with_index do |img, i| %>
-          <li data-target="#imagesAlbum-<%= post.id %>" data-slide-to="<%= i%>" class="<%= (i == 0)? 'active': '' %>"></li>
-          <% end %>
-        </ol>
-        <div class="carousel-inner">
-          <% num_of_images = post.post_images.count %>
-          <% post.post_images.each_with_index do |img, i| %>
-            <div class="carousel-item <%= (i == 0)? 'active': '' %>">
-              <%= image_tag img.link.url %>
-              <div class="carousel-caption">
-                <h5><%= i+1 %>/<%= num_of_images %></h5>
+        <div id="imagesAlbum-<%= post.id %>" class="carousel slide " data-ride="carousel" data-interval="false">
+          <ol class="carousel-indicators">
+            <% num_of_images = post.post_images.count %>
+            <% post.post_images.each_with_index do |img, i| %>
+            <li data-target="#imagesAlbum-<%= post.id %>" data-slide-to="<%= i%>" class="<%= (i == 0)? 'active': '' %>"></li>
+            <% end %>
+          </ol>
+          <div class="carousel-inner">
+            <% num_of_images = post.post_images.count %>
+            <% post.post_images.each_with_index do |img, i| %>
+              <div class="carousel-item <%= (i == 0)? 'active': '' %>">
+                <%= image_tag img.link.url %>
+                <div class="carousel-caption">
+                  <h5><%= i+1 %>/<%= num_of_images %></h5>
+                </div>
               </div>
-            </div>
-          <% end %>
-        </div>
+            <% end %>
+          </div>
 
-        <a class="carousel-control-prev" href="#imagesAlbum-<%= post.id %>" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#imagesAlbum-<%= post.id %>" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+          <a class="carousel-control-prev" href="#imagesAlbum-<%= post.id %>" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </a>
+          <a class="carousel-control-next" href="#imagesAlbum-<%= post.id %>" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </a>
+        </div>
       <% end %>
     </span>
 
@@ -82,7 +80,7 @@
   </li>
 
   <div class= "card-footer">
-  <%= render "like_form",post_id: post.id if user_signed_in? %>
+  <%= render "shared/reaction/like_form",post_id: post.id if user_signed_in? %>
   </div>
 
 </div>
