--- a/app/views/shared/reaction/_like_form.html.erb
+++ b/app/views/shared/reaction/_like_form.html.erb
@@ -1,7 +1,7 @@
 <div id="reaction_form-<%= post_id%>">
   <% if current_user.having_reaction?(current_user.id, post_id) %>
-    <%= render "unlike",post_id: post_id %>
+    <%= render "shared/reaction/unlike",post_id: post_id %>
   <%else %>
-   <%= render "like",post_id: post_id %>
+   <%= render "shared/reaction/like",post_id: post_id %>
   <% end %>
 </div>
